# rust-learn-api

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
